# ansible-collection-crowdstrike

./: .ansible-lint-ignore  .ansible-lint.yml  .gitignore  .yamllint  Makefile  README.md  devbox.json  galaxy.yml  pyproject.toml
.github/workflows/: libvirt.yml  lint.yml  release.yml
molecule/common/: destroy.yml  install.yml  uninstall.yml  verify.yml
molecule/install/: molecule.yml
playbooks/: defaults.yml  deploy.yml  destroy.yml  group.yml  install.yml  uninstall.yml  validate.yml
